gccida/c0/peephole2_insns
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peephole2_insns/src/insn-recog.c:59119:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.insn = 0LL; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peephole2_insns/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/peephole2_insns/src/obj/insn-recog.o] Error 1
